# monkeytype-tgbot

./: .gitignore  README.md  pyproject.toml
src/: auth_client.py  config.py  external_api.py  logger.py  main.py
src/database/: db.py
src/tgbot/: bot.py  handlers.py  notify.py
src/utils/: __init__.py
tests/: conftest.py  test_utils.py
