[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["hachimaru <74972395+xxspell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
aiosqlite = "^0.20.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
aiogram = "^3.10.0"
pydantic-settings = "^2.3.4"
pytest-aiohttp = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
# Указывает директорию для тестов
testpaths = ["tests"]

# Включает отображение подробной информации о выполнении тестов
addopts = "-q"

# Включает поддержку асинхронных тестов
markers = [
    "asyncio: mark a test as asyncio-based"
]
